# openenclave

common/sgx/: sgxmeasure.c
docs/DesignDocs/: ExtendedEnclaveInitializationData_V2.md  SGX_0-base_Enclave.md
enclave/core/sgx/: globals.c  init.c
host/sgx/: create.c  sgx_enclave_common_wrapper.c  sgx_enclave_common_wrapper.h  sgxload.c  sgxmeasure.c
include/openenclave/bits/sgx/: sgxproperties.h  sgxtypes.h
include/openenclave/internal/: globals.h  sgxcreate.h
include/openenclave/internal/sgx/: sgxproperties.h
samples/: CMakeLists.txt
samples/allocator/: allocator_demo.edl
samples/allocator/enclave/: Makefile  allocator_demo.conf  enc.cpp
samples/allocator/host/: host.cpp
scripts/ansible/: requirements.txt
tests/: CMakeLists.txt
tests/SampleApp/enc/: SampleApp.cpp
tests/SampleApp/host/: CMakeLists.txt
tests/SampleAppZeroBase/: CMakeLists.txt
tests/SampleAppZeroBase/enc/: CMakeLists.txt  SampleAppZeroBase.cpp
tests/SampleAppZeroBase/host/: CMakeLists.txt  SampleAppZeroBaseHost.cpp
tests/pf_gp_exceptions/enc/: enc.c
tests/props/host/: host.c
tests/tools/oesign/test-inputs/: CMakeLists.txt  make-oesign-config.py
tools/oesign/: main.c  oesign.c
